--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,8 @@
         "laravel/framework": "4.0.*",
         "dflydev/markdown": "v1.0.3",
         "artdarek/oauth-4-laravel": "dev-master",
-        "mjohnson/decoda": "6.2.3"
+        "mjohnson/decoda": "6.2.3",
+        "diff/diff": "dev-master"
     },
     "autoload": {
         "classmap": [
