--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,7 @@
         "dflydev/markdown": "v1.0.3",
         "artdarek/oauth-4-laravel": "dev-master",
         "mjohnson/decoda": "6.2.3",
-        "diff/diff": "dev-master"
+        "phpspec/php-diff": "dev-master"
     },
     "autoload": {
         "classmap": [
