--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,8 @@
         "phpspec/php-diff": "dev-master",
 	    "michelf/php-markdown": "1.4.0",
         "mitch/hashids": "dev-master",
-        "guzzlehttp/guzzle": "~4.0"
+        "guzzlehttp/guzzle": "~4.0",
+        "elasticsearch/elasticsearch": "~1.0"
     },
     "autoload": {
         "classmap": [
@@ -42,5 +43,8 @@
     "config": {
         "preferred-install": "dist"
     },
-    "minimum-stability": "dev"
+    "minimum-stability": "dev",
+    "require-dev": {
+        "barryvdh/laravel-ide-helper": "~1.11@dev"
+    }
 }
