--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "private": true,
   "devDependencies": {
-    "gulp": "^3.8.8"
-  },
-  "dependencies": {
+    "gulp": "^3.8.8",
     "laravel-elixir": "^3.0.0",
-    "bootstrap-sass": "^3.0.0"
-  }
+    "laravel-elixir-stylus": "^1.0.1",
+    "postcss-position": "^0.4.0",
+    "poststylus": "^0.2.1"
+  },
+  "dependencies": {}
 }
