fix composer.json & lock

--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,7 @@
   "type": "project",
   "require": {
     "php": ">=5.5.9",
-    "laravel/framework": "5.1.*",
+    "laravel/framework": "5.1.*"
   },
   "require-dev": {
     "fzaninotto/faker": "~1.4",
