--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,9 @@
   "type": "project",
   "require": {
     "php": ">=5.5.9",
-    "laravel/framework": "5.1.*"
+    "laravel/framework": "5.1.*",
+    "barryvdh/laravel-ide-helper": "^2.1",
+    "barryvdh/laravel-debugbar": "^2.0"
   },
   "require-dev": {
     "fzaninotto/faker": "~1.4",
@@ -23,7 +25,7 @@
       "database"
     ],
     "psr-4": {
-      "App\\": "app/"
+      "LaravelFrance\\": "app/"
     }
   },
   "autoload-dev": {
