--- a/composer.json
+++ b/composer.json
@@ -10,15 +10,16 @@
   "require": {
     "php": ">=5.5.9",
     "laravel/framework": "5.1.*",
-    "barryvdh/laravel-ide-helper": "^2.1",
-    "barryvdh/laravel-debugbar": "^2.0"
+    "fadion/bouncy": "dev-l5"
   },
   "require-dev": {
     "fzaninotto/faker": "~1.4",
     "mockery/mockery": "0.9.*",
     "phpunit/phpunit": "~4.0",
     "phpspec/phpspec": "~2.1",
-    "laravel/homestead": "^2.1"
+    "laravel/homestead": "^2.1",
+    "barryvdh/laravel-ide-helper": "^2.1",
+    "barryvdh/laravel-debugbar": "^2.0"
   },
   "autoload": {
     "classmap": [
@@ -51,7 +52,9 @@
       "php artisan key:generate"
     ]
   },
+  "prefer-stable": true,
   "config": {
     "preferred-install": "dist"
-  }
+  },
+  "minimum-stability": "dev"
 }
