--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,10 @@
   "require": {
     "php": ">=5.5.9",
     "laravel/framework": "5.1.*",
-    "fadion/bouncy": "dev-l5"
+    "fadion/bouncy": "dev-l5",
+    "doctrine/dbal": "~2.3",
+    "league/html-to-markdown": "^4.1@dev",
+    "league/commonmark": "^0.11"
   },
   "require-dev": {
     "fzaninotto/faker": "~1.4",
@@ -43,6 +46,10 @@
       "php artisan clear-compiled"
     ],
     "post-update-cmd": [
+      "php artisan clear-compiled",
+      "php artisan ide-helper:generate",
+      "php artisan ide-helper:models -N",
+      "php artisan ide-helper:meta",
       "php artisan optimize"
     ],
     "post-root-package-install": [
