--- a/package.json
+++ b/package.json
@@ -7,5 +7,7 @@
     "postcss-position": "^0.4.0",
     "poststylus": "^0.2.1"
   },
-  "dependencies": {}
+  "dependencies": {
+    "highlight.js": "^8.8.0"
+  }
 }
