--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,8 @@
     "doctrine/dbal": "~2.3",
     "league/html-to-markdown": "^4.1@dev",
     "league/commonmark": "^0.11",
-    "laravel/socialite": "^3.0@dev"
+    "laravel/socialite": "^3.0@dev",
+    "uxweb/sweet-alert": "~1.1"
   },
   "require-dev": {
     "fzaninotto/faker": "~1.4",
