woking on posting panel

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "poststylus": "^0.2.1",
     "sweetalert": "^1.1.0",
     "vue": "github:yyx990803/vue#dev",
+    "vue-resource": "^0.1.16",
     "vueify": "^1.1.5"
   },
   "dependencies": {}
