--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,8 @@
     "laravel/socialite": "^3.0@dev",
     "uxweb/sweet-alert": "~1.1",
     "lord/laroute": "^2",
-    "cviebrock/eloquent-sluggable": "dev-master"
+    "cviebrock/eloquent-sluggable": "dev-master",
+    "predis/predis": "~1.0"
   },
   "require-dev": {
     "fzaninotto/faker": "~1.4",
