--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "devDependencies": {
     "babel": "^5.8.23",
     "gulp": "^3.8.8",
+    "gulp-shell": "^0.5.0",
     "highlight.js": "^8.8.0",
     "insert-css": "^0.2.0",
     "laravel-elixir": "^3.0.0",
@@ -15,6 +16,5 @@
     "vue-resource": "^0.1.16",
     "vueify": "^1.1.5"
   },
-  "dependencies": {
-  }
+  "dependencies": {}
 }
