--- a/package.json
+++ b/package.json
@@ -1,13 +1,18 @@
 {
   "private": true,
   "devDependencies": {
+    "autoprefixer": "^6.0.3",
+    "autosize": "^3.0.13",
     "babel": "^5.8.23",
-    "gulp": "^3.8.8",
+    "gulp": "^3.9.0",
+    "gulp-postcss": "^6.0.1",
     "gulp-shell": "^0.5.0",
+    "gulp-sourcemaps": "^1.6.0",
     "highlight.js": "^8.8.0",
     "insert-css": "^0.2.0",
     "laravel-elixir": "^3.0.0",
     "laravel-elixir-stylus": "^1.0.1",
+    "lost": "^6.6.2",
     "moment": "^2.10.6",
     "postcss-position": "^0.4.0",
     "poststylus": "^0.2.1",
