--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
     "autoprefixer": "^6.0.3",
     "autosize": "^3.0.13",
     "babel": "^5.8.23",
+    "browserify": "^11.2.0",
+    "browserify-shim": "^3.8.10",
+    "font-awesome": "^4.4.0",
     "gulp": "^3.9.0",
     "gulp-postcss": "^6.0.1",
     "gulp-shell": "^0.5.0",
@@ -16,6 +19,7 @@
     "moment": "^2.10.6",
     "postcss-position": "^0.4.0",
     "poststylus": "^0.2.1",
+    "simplemde": "^1.8.0",
     "sweetalert": "^1.1.0",
     "vue": "github:yyx990803/vue#dev",
     "vue-resource": "^0.1.16",
