--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,7 @@
   "type": "project",
   "require": {
     "php": ">=5.5.9",
-    "laravel/framework": "5.1.*",
+    "laravel/framework": "5.1.x-dev",
     "fadion/bouncy": "dev-l5",
     "doctrine/dbal": "~2.3",
     "league/html-to-markdown": "^4.1@dev",
@@ -18,7 +18,8 @@
     "lord/laroute": "^2",
     "cviebrock/eloquent-sluggable": "dev-master",
     "predis/predis": "~1.0",
-    "erusev/parsedown": "dev-master"
+    "erusev/parsedown": "dev-master",
+    "pda/pheanstalk": "~3.0"
   },
   "require-dev": {
     "fzaninotto/faker": "~1.4",
