--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
     "autoprefixer": "^6.0.3",
     "autosize": "^3.0.13",
     "babel": "^5.8.23",
+    "babel-runtime": "^5.8.25",
     "browserify": "^11.2.0",
     "browserify-shim": "^3.8.10",
+    "browserify-hmr": "^0.3.1",
     "font-awesome": "^4.4.0",
     "gulp": "^3.9.0",
     "gulp-postcss": "^6.0.1",
@@ -21,9 +23,11 @@
     "poststylus": "^0.2.1",
     "simplemde": "^1.8.0",
     "sweetalert": "^1.1.0",
-    "vue": "github:yyx990803/vue#dev",
+    "vue": "^1.0.0",
+    "vue-hot-reload-api": "^1.2.1",
     "vue-resource": "^0.1.16",
-    "vueify": "^1.1.5"
+    "vueify": "^4.0.0",
+    "vueify-insert-css": "^1.0.0"
   },
   "dependencies": {}
 }
