--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,9 @@
 APP_ENV=local
 APP_DEBUG=true
-APP_KEY=SomeRandomString
+APP_KEY=SomeRandingString
+
+APP_URL=http://homestead.app
+APP_DOMAIN=homestead.app
 
 DB_HOST=localhost
 DB_DATABASE=homestead
@@ -8,12 +11,27 @@ DB_USERNAME=homestead
 DB_PASSWORD=secret
 
 CACHE_DRIVER=file
-SESSION_DRIVER=file
-QUEUE_DRIVER=sync
+SESSION_DRIVER=redis
+QUEUE_DRIVER=beanstalkd
 
-MAIL_DRIVER=smtp
+MAIL_DRIVER=log
 MAIL_HOST=mailtrap.io
 MAIL_PORT=2525
 MAIL_USERNAME=null
 MAIL_PASSWORD=null
 MAIL_ENCRYPTION=null
+
+MANDRILL_SECRET=
+
+
+GOOGLE_CLIENT_ID=
+GOOGLE_CLIENT_SECRET=
+
+GITHUB_CLIENT_ID=
+GITHUB_CLIENT_SECRET=
+
+TWITTER_CLIENT_ID=
+TWITTER_CLIENT_SECRET=
+
+DROPBOX_ACCESS_TOKEN=
+DROPBOX_APP_SECRET=
