--- a/composer.json
+++ b/composer.json
@@ -23,14 +23,14 @@
     "laravelcollective/html": "5.1.*",
     "league/flysystem-dropbox": "^1.0@dev",
     "spatie/laravel-backup": "dev-master",
-    "craftyx/slack-api": "dev-master"
+    "craftyx/slack-api": "dev-master",
+    "laravel/homestead": "~3.0"
   },
   "require-dev": {
     "fzaninotto/faker": "~1.4",
     "mockery/mockery": "0.9.*",
     "phpunit/phpunit": "~4.0",
     "phpspec/phpspec": "~2.1",
-    "laravel/homestead": "^2.1",
     "barryvdh/laravel-ide-helper": "^2.1",
     "barryvdh/laravel-debugbar": "^2.0"
   },
