--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,7 @@
   "type": "project",
   "require": {
     "php": ">=5.5.9",
-    "laravel/framework": "5.1.x-dev",
+    "laravel/framework": "5.2.*",
     "fadion/bouncy": "dev-l5",
     "doctrine/dbal": "~2.3",
     "league/html-to-markdown": "^4.1@dev",
@@ -20,7 +20,7 @@
     "predis/predis": "~1.0",
     "erusev/parsedown": "dev-master",
     "pda/pheanstalk": "~3.0",
-    "laravelcollective/html": "5.1.*",
+    "laravelcollective/html": "5.2.*",
     "league/flysystem-dropbox": "^1.0@dev",
     "spatie/laravel-backup": "dev-master",
     "craftyx/slack-api": "dev-master",
@@ -32,7 +32,9 @@
     "phpunit/phpunit": "~4.0",
     "phpspec/phpspec": "~2.1",
     "barryvdh/laravel-ide-helper": "^2.1",
-    "barryvdh/laravel-debugbar": "^2.0"
+    "barryvdh/laravel-debugbar": "^2.0",
+    "symfony/dom-crawler": "~3.0",
+    "symfony/css-selector": "~3.0"
   },
   "autoload": {
     "classmap": [
