--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,7 @@
     "pda/pheanstalk": "~3.0",
     "laravelcollective/html": "5.2.*",
     "league/flysystem-dropbox": "^1.0@dev",
-    "spatie/laravel-backup": "dev-master",
+    "spatie/laravel-backup": "3.10.2",
     "craftyx/slack-api": "dev-master",
     "laravel/homestead": "~3.0"
   },
