--- a/.env.example
+++ b/.env.example
@@ -33,7 +33,8 @@ GITHUB_CLIENT_SECRET=
 TWITTER_CLIENT_ID=
 TWITTER_CLIENT_SECRET=
 
-DROPBOX_ACCESS_TOKEN=
-DROPBOX_APP_SECRET=
+# DROPBOX_ACCESS_TOKEN=
+# DROPBOX_APP_SECRET=
+DROPBOX_AUTHORIZATION_TOKEN=
 
 SLACK_TOKEN=
