--- a/src/public/mix-manifest.json
+++ b/src/public/mix-manifest.json
@@ -1,4 +1,4 @@
 {
-    "/js/app.js": "/js/app.js",
-    "/css/app.css": "/css/app.css"
+    "/js/app.js": "/js/app.js?id=e34f6b0ffc7fa6c3b929",
+    "/css/app.css": "/css/app.css?id=1c2387f0975eb855cfbb"
 }
