add algolia search engine

--- a/src/.env.example
+++ b/src/.env.example
@@ -44,3 +44,7 @@ MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 
 SLACK_MONITORING_WEBHOOK=""
+
+SCOUT_PREFIX="prod_"
+ALGOLIA_APP_ID=""
+ALGOLIA_SECRET=""
