--- a/src/composer.json
+++ b/src/composer.json
@@ -42,7 +42,9 @@
     },
     "extra": {
         "laravel": {
-            "dont-discover": []
+            "dont-discover": [
+                "laravel/telescope"
+            ]
         }
     },
     "autoload": {
