change css & add npm to docker compose

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -58,3 +58,11 @@ services:
       - "9000:9000"
     networks:
       - laravelfrance
+
+  node:
+    image: node
+    working_dir: /tmp
+    volumes:
+      - ./src:/tmp
+
+
