--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -5,22 +5,30 @@ on: [push]
 jobs:
   laravel-tests:
     runs-on: ubuntu-latest
+    env:
+      working_dir: ./src
     steps:
     - uses: actions/checkout@v2
     - name: Copy .env
       run: php -r "file_exists('.env') || copy('.env.example', '.env');"
+      working-directory: ${{env.working_dir}}
     - name: Install Dependencies
       run: composer install -q --no-ansi --no-interaction --no-scripts --no-suggest --no-progress --prefer-dist
+      working-directory: ${{env.working_dir}}
     - name: Generate key
       run: php artisan key:generate
+      working-directory: ${{env.working_dir}}
     - name: Directory Permissions
       run: chmod -R 777 storage bootstrap/cache
+      working-directory: ${{env.working_dir}}
     - name: Create Database
       run: |
         mkdir -p database
         touch database/database.sqlite
+      working-directory: ${{env.working_dir}}
     - name: Execute tests (Unit and Feature tests) via PHPUnit
       env:
         DB_CONNECTION: sqlite
         DB_DATABASE: database/database.sqlite
       run: vendor/bin/phpunit
+      working-directory: ${{env.working_dir}}
