use easymde instead of simple mde

--- a/src/package.json
+++ b/src/package.json
@@ -25,8 +25,8 @@
     },
     "dependencies": {
         "bootstrap-sweetalert": "^1.0.1",
+        "easymde": "^2.9.0",
         "font-awesome": "^4.7.0",
-        "highlight.js": "^9.18.1",
-        "simplemde": "^1.11.2"
+        "highlight.js": "^9.18.1"
     }
 }
