--- a/src/composer.json
+++ b/src/composer.json
@@ -1,4 +1,11 @@
 {
+    "repositories": [
+        {
+            "type": "vcs",
+            "url": "https://github.com/jasonmccreary/eloquent-sluggable"
+        }
+    ],
+
     "name": "laravel/laravel",
     "type": "project",
     "description": "The Laravel Framework.",
@@ -9,15 +16,16 @@
     "license": "MIT",
     "require": {
         "php": "^7.2",
-        "algolia/scout-extended": "^1.8",
-        "craftyx/slack-api": "2.0.4",
-        "cviebrock/eloquent-sluggable": "^6.0",
-        "fideloper/proxy": "^4.0",
+        "algolia/scout-extended": "^1.9",
+        "craftyx/slack-api": "3.0",
+        "cviebrock/eloquent-sluggable": "dev-patch-1",
+        "fideloper/proxy": "^4.2",
+        "fruitcake/laravel-cors": "^1.0",
         "graham-campbell/markdown": "^11.1",
-        "laravel/framework": "^6.0",
+        "laravel/framework": "^7.0",
         "laravel/slack-notification-channel": "^2.0",
         "laravel/socialite": "^4.2",
-        "laravel/tinker": "^1.0",
+        "laravel/tinker": "^2.0",
         "league/commonmark-ext-autolink": "^1.0",
         "league/commonmark-ext-table": "^2.1",
         "predis/predis": "^1.1",
@@ -27,12 +35,12 @@
     },
     "require-dev": {
         "barryvdh/laravel-ide-helper": "^2.6",
-        "facade/ignition": "^1.4",
+        "facade/ignition": "^2.0",
         "fzaninotto/faker": "^1.4",
-        "laravel/ui": "^1.1",
-        "mockery/mockery": "^1.0",
-        "nunomaduro/collision": "^3.0",
-        "phpunit/phpunit": "^8.0"
+        "laravel/ui": "^2.0",
+        "mockery/mockery": "^1.3.1",
+        "nunomaduro/collision": "^4.1",
+        "phpunit/phpunit": "^8.5"
     },
     "config": {
         "optimize-autoloader": true,
