--- a/src/composer.json
+++ b/src/composer.json
@@ -1,11 +1,4 @@
 {
-    "repositories": [
-        {
-            "type": "vcs",
-            "url": "https://github.com/jasonmccreary/eloquent-sluggable"
-        }
-    ],
-
     "name": "laravel/laravel",
     "type": "project",
     "description": "The Laravel Framework.",
@@ -18,7 +11,7 @@
         "php": "^7.2",
         "algolia/scout-extended": "^1.9",
         "craftyx/slack-api": "3.0",
-        "cviebrock/eloquent-sluggable": "dev-patch-1",
+        "cviebrock/eloquent-sluggable": "^7.0",
         "fideloper/proxy": "^4.2",
         "fruitcake/laravel-cors": "^1.0",
         "graham-campbell/markdown": "^11.1",
